<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202732"
    tools:context=".ActivityMenuPrincipal" >

    <Button
        android:id="@+id/buttonMostrarClientes"
        android:layout_width="110dp"
        android:layout_height="88dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:background="@drawable/botones"
        android:onClick="MostrarClientesOnClic"
        android:text="@string/buttonMostrarClientes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:id="@+id/buttonMostrarConceptos"
        android:layout_width="105dp"
        android:layout_height="84dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/holo_purple"
        android:onClick="MostrarConceptosOnClic"
        android:text="@string/buttonMostrarConceptos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMenuPrincipal" />

    <Button
        android:id="@+id/buttonMostrarProductos"
        android:layout_width="107dp"
        android:layout_height="87dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="136dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="MostrarProductosOnClic"
        android:text="@string/buttonMostrarProductos"
        app:layout_constraintEnd_toStartOf="@+id/buttonMostrarConceptos"
        app:layout_constraintStart_toEndOf="@+id/buttonMostrarClientes"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMostrarVentas"
        android:layout_width="110dp"
        android:layout_height="90dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="20dp"
        android:background="?attr/colorAccent"
        android:onClick="MostrarVentasOnClic"
        android:text="@string/buttonMostrarVentas"
        app:layout_constraintEnd_toStartOf="@+id/buttonMostrarUsuarios"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMostrarClientes" />

    <Button
        android:id="@+id/buttonMostrarUsuarios"
        android:layout_width="110dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="72dp"
        android:background="?android:attr/colorActivatedHighlight"
        android:onClick="MostrarUsuariosOnClic"
        android:text="@string/buttonMostrarUsuarios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMostrarClientes" />

    <TextView
        android:id="@+id/textViewMenuPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/textviewMenuPrincipal"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/ListViewDatos"
        android:layout_width="301dp"
        android:layout_height="268dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMostrarVentas" />

</androidx.constraintlayout.widget.ConstraintLayout>